--- a/API+JS+HTML+Bootstrap-ПРОЕКТ/help.html
+++ b/API+JS+HTML+Bootstrap-ПРОЕКТ/help.html
@@ -91,7 +91,7 @@
       </div>
       <div class="wrapper3 row column-gap-3 mt-5 justify-content-between mx-4" style="font-size: 1.5rem">
 
-        <h3 style="text-align: center; margin-top: 5px;    font-weight: bolder; text-indent: 100px">Виды помощи</h3>
+        <h3 style="text-align: center; margin-top: 5px;    font-weight: bolder; text-indent: 100px">Как помочь::</h3>
 
         <h3 style="text-align: center; margin-top: 5px;    font-weight: bolder;">Медицинские препараты:</h3>
 
@@ -104,14 +104,12 @@
 
           <p>Препараты из обычной аптеки: Урсофальк (Урсосан) 250мг , Гептрал (Гептор) 400 мг, Дермазин, Амоксиклав (вет.аналоги: Синулокс, Синуксол, Кладакса), Габапентин, Омез, бинты самофиксирующиеся, ПК-Мерц, Бетасерк, Левомеколь, Триттико, Раствор Рингера, крем Seni care с цинком
 
-            Препараты из ветеринарной аптеки: Фортекор, 20 мг, Превикокс 227мг, Онсиор 40мг, Шиерия, Маропиталь, Террамицин, Ветмедин 50х5мг; средства от внешних и внутренних паразитов для взрослых собак и щенков от 10 до 20 кг и от 20 до 40 : капли адвокат, адвантикс, фронтлайн, селафорт, дана ультра, стронгхолд, инспектор; таблетки дронтал, мильбемакс, милпразол, каниквантел</p>
-   
+            </p>
 
           <p>Будем рады профессиональным фотографам, которые готовы помочь нам в съемке наших собак. Хорошее фото – лучший шанс найти дом.
           
           В приюте около 2500 собак, поэтому всегда нужны волонтеры, чтобы помочь собакам (на регулярной основе для выгула и социализации собак или периодически для выполнения различных работ).
-          
-          Нам очень нужна любая информационная поддержка - чем больше людей узнает о том, какие прекрасные питомцы ждут их в приюте, тем больше собак станут счастливыми.
+  
           </p>
         </div>
       </div>
@@ -133,7 +131,6 @@
     <script src="js/validator.js"></script>
   </body>
 </html>
-
 
 
 
