--- a/API+JS+HTML+Bootstrap-ПРОЕКТ/About.html
+++ b/API+JS+HTML+Bootstrap-ПРОЕКТ/About.html
@@ -54,7 +54,7 @@
               </ul>
               
               <form id="form" method="post" action="php/form.php">
-                <h5>Регистрация</h5>
+                <h5>Регистрация для волонтеров</h5>
                 <div class="form-group">
                   <label for="exampleInputEmail1" class="form-label">Адрес электронной почты</label>
                   <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp"/>
@@ -113,6 +113,12 @@
     <script src="js/validator.js"></script>
   </body>
 </html>
+
+
+
+
+
+
 
 
 
