--- a/API+JS+HTML+Bootstrap-ПРОЕКТ/Contact.html
+++ b/API+JS+HTML+Bootstrap-ПРОЕКТ/Contact.html
@@ -56,7 +56,7 @@
                 </li>
               </ul>
               <form id="form" method="post" action="php/form.php">
-                <h5>Регистрация</h5>
+                <h5>Регистрация для волонтеров</h5>
                 <div class="form-group">
                   <label for="exampleInputEmail1" class="form-label">Адрес электронной почты</label>
                   <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp"/>
@@ -122,3 +122,4 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
