Редактирование навигационной панели

--- a/API+JS+HTML+Bootstrap-ПРОЕКТ/main.html
+++ b/API+JS+HTML+Bootstrap-ПРОЕКТ/main.html
@@ -57,7 +57,7 @@
               </li>
             </ul>
            <form id="form" method="post" action="php/form.php">
-              <h5>Регистрация</h5>
+              <h5>Регистрация для волонтеров</h5>
               <div class="form-group">
                 <label for="exampleInputEmail1" class="form-label">Адрес электронной почты</label>
                 <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp"/>
